--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -6,8 +6,256 @@
   font-family: 'Poppins',sans-serif;
 }
 
-body {
-  background-color: rgb(244, 243, 237);
+
+main {
+  background-color:#f3f4ed;
+
+}
+
+.home-heading {
+  font-size: 80px;
+  text-transform: uppercase;
+  font-weight: 700;  
+}
+
+.author-image img{
+  display: block;
+  width: 375px;
+  border-radius: 30px;
+  border: 2px solid #fff;
+  rotate: 10deg;
+  margin: 0 60px;
+  z-index: -10;
+}
+
+.author-image img:hover {
+  rotate: 0deg;
+  transition: all 0.5s ease-in-out;
+}
+
+.hi-walker {
+  width:fit-content;
+  padding: 30px;
+}
+
+.company {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  border: 1px solid #e5e7eb;;
+  border-radius: 20px;
+  margin: 20px;
+  padding: 20px;
+  max-width: 450px;
+  font-size: 20px;
+  background-color: #fff;
+  line-height: 2rem;
+}
+
+.card-image {
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.story-item {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 50px;
+  border: 1px solid rgb(60, 46, 46);
+  border-radius: 5px;
+}
+
+.story-description {
+  padding-left: 50px;
+
+}
+
+.story-description h4 {
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  padding: 25px 0;
+}  
+
+.story-description h3{
+  font-size: 30px;
+  text-transform: uppercase;
+}
+ 
+.story-description button {
+  padding: 1.25rem 34px;
+  border-radius: 5px;
+  font-size: 0.875rem;
+  font-weight: 500;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+
+#contact-me {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-heading h1 {
+  font-weight:900 ;
+  text-transform: capitalize;
+  padding-left: 50px;
+}
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.contact {
+  padding: 20px;
+  background-color: #fff;
+  margin: 20px 10px;
+  border-radius: 20px;
+  width: 100%;
+}
+
+.contact div {
+  background-color: rgb(254, 252, 249);
+  margin: 20px 0;
+  padding: 20px;
+}
+
+
+.contact img {
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.contact h4 {
+  font-size:large;
+  font-weight: 600;
+}
+
+.contact span {
+  font-size: small;
+}
+
+.form-div {
+  padding: 20px;
+  background-color: #fff;
+  margin: 20px 0;
+  border-radius: 20px;
+  width: 100%;
+}
+
+.contact-form {
+  width: 100%;
+  padding: 20px;
+  /* background-color: red; */
+}
+
+.form-label {
+  display: block;
+  margin-bottom: 0px;
+  text-transform: uppercase;
+
+}
+
+.form-control {
+  width: 80%;
+  height: 70px;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  padding:  0 20px;
+  
+}
+
+.contact-btn {
+  padding: 20px 30px;
+  background-color: #000;
+  color: #fff;
+}
+
+footer  {
+  text-align: center;
+  padding-top: 140px;
+}
+
+.mind {
+  font-size: x-large;
+}
+
+.letwork {
+  font-size: 80px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.copyright {
+margin-top: 10%;
+padding-bottom: 10px;
+margin-bottom: 0;
+}
+
+
+@media only screen and (min-width: 600px) {
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:flex-start;
+  }
+
+  .card {
+  border: 1px solid #e5e7eb;;
+  margin: 20px;
+  padding: 20px;
+  max-width: 500px;
+  font-size: 20px;
+  line-height: 2rem;
+}
+
+
+.story-item {
+  flex-wrap: nowrap;
+}
+
+.story-description {
+  padding-left: 50px;
+
+}
+
+
+.story-description h4 {
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  padding: 25px 0;
+}  
+
+.story-description h3{
+  font-size: 40px;
+  text-transform: uppercase;
+}
+ 
+.story-description button {
+  padding: 1.25rem 34px;
+  border-radius: 5px;
+  font-size: 0.875rem;
+  font-weight: 500;
+  margin-top: 20px;
+  cursor: pointer;
 }
 
 header {
@@ -123,25 +371,15 @@ a:hover {
   line-height: 28px;
 }
 
-.author-image img{
-  display: block;
-  width: 375px;
-  border-radius: 30px;
-  border: 2px solid #fff;
-  rotate: 10deg;
-  margin: 0 60px;
-  z-index: -10;
-}
-
-.author-image img:hover {
-  rotate: 0deg;
-  transition: all 0.5s ease-in-out;
-}
 
 .author-text p{
   padding-bottom: 1rem;
 }
 
+.hi-walker {
+  width:300px;
+  padding: 0;
+}
 .in-touch {
   padding: 1.25rem 34px;
   background-color: #000;
@@ -168,12 +406,6 @@ a:hover {
   padding: 30px;
 }
 
-.company {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-}
 
 .company h5{
   padding: 20px;
@@ -217,10 +449,6 @@ a:hover {
   padding: 100px;
 }
 
-.container {
-  /* max-width: 1140px; */
-  padding: 20px;
-}
 
 #services h2 {
   font-size: 60px;
@@ -264,9 +492,6 @@ a:hover {
 }
 
 
-#recent-work {
-  background-color: #000;
-}
 
 .workheading {
   color: white;
@@ -299,30 +524,6 @@ a:hover {
   text-transform:capitalize;
 }
 
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.card {
-  border: 1px solid #e5e7eb;;
-  border-radius: 20px;
-  margin: 20px;
-  padding: 20px;
-  max-width: 350px;
-  font-size: 20px;
-  background-color: #fff;
-  line-height: 2rem;
-}
-
-.card-image {
-  display: block;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin-bottom: 20px;
-}
-
 #stories {
   background-color: #000;
   color: #fff;
@@ -338,35 +539,6 @@ a:hover {
   width: 517px;
 }
 
-.story-item {
-  display: flex;
-  margin-bottom: 50px;
-}
-.story-description {
-  padding-left: 50px;
-
-}
-
-
-.story-description h4 {
-  font-size: 0.75rem;
-  text-transform: uppercase;
-  padding: 25px 0;
-}  
-
-.story-description h3{
-  font-size: 40px;
-  text-transform: uppercase;
-}
- 
-.story-description button {
-  padding: 1.25rem 34px;
-  border-radius: 5px;
-  font-size: 0.875rem;
-  font-weight: 500;
-  margin-top: 20px;
-  cursor: pointer;
-}
 
 #contact-me {
   display: flex;
@@ -376,19 +548,19 @@ a:hover {
 .contact-heading {
 
 }
+
 .contacts {
   display: flex;
+  flex-direction: row;
   padding: 20px;
 }
+
 
 .contact {
-  padding: 20px;
-  background-color: #fff;
+  display: block;
   margin: 20px;
-  border-radius: 20px;
   width: 30%;
 }
-
 
 .contact img {
   display: block;
@@ -397,6 +569,15 @@ a:hover {
   border-radius: 50%;
   margin-bottom: 20px;
 }
+
+.contact h4 {
+  font-size:larger;
+}
+
+.contact span {
+  font-size: medium;
+}
+
 
 .form-div {
   padding: 20px;
@@ -436,14 +617,14 @@ footer  {
   padding-top: 140px;
 }
 
+
 .letwork {
   font-size: 150px;
-  font-weight: bold;
-  text-transform: uppercase;
 }
 
 .copyright {
 margin-top: 10%;
 padding-bottom: 10px;
 margin-bottom: 0;
+}
 }
